Remove scoring system
